thank you kind and lovely teachers

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
 
     <div class='col-md-8'>
       <h2>Beer Detail</h2>
+
       <div id="beer-detail">
+        <h4>Choose a beer from the beer list to get some beer knowledge:</h4>
       </div>
     </div>
   </div>
