I can do better

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <div class='row'>
 
-    <div class='col-md-4'>
+    <div id="big-bar" class='col-md-4'>
       <ul class="list-group" id="list-group">
       </ul>
     </div>
